--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>This is the starting of career</h1>
     <p>Happy New year 2020,starting the session on 02/01/2020</p>
+    <p>Friday it will be another session on GitHub</p>
 </body>
 </html>
