--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="mordern,mordern pottery,mordern Arts,pottery,Arts">
     <meta name="author" content="Nelson Habumugisha">
     <title>mordernpottery | Welcome</title>
-    <link rel="stylesheet" href="/xampp/htdocs/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
