--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Mordern Pottery and Arts">
     <meta name="keywords" content="mordern,mordern pottery,mordern Arts,pottery,Arts">
     <meta name="author" content="Nelson Habumugisha">
-    <title>mordernpottery | Welcome</title>
+    <title>Mordernpottery | Welcome</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
